--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@
 :root {
     --primary: #ffffff;
     --primary-color: rgb(255, 0, 0);
+    --secondary-color: #ffffff;
     --primary-text: #000000;
     --secondary-text: #232323;
 
@@ -16,12 +17,18 @@ body{
     transition: all 0.3s;
 }
 
+p{
+    margin: 10px 0px;
+    line-height: 1.6;
+}
+
 
 
 #main-header{
     width: 100%;
     height: 60px;
-    background-color: var(--primary);
+    /* background-color: var(--primary); */
+    background-color: aqua;
 }
 
 
@@ -43,7 +50,6 @@ body{
 
  .thumbnail img{
     width: 100%;
-    height: 350px;
 }
 
 
@@ -81,7 +87,31 @@ body{
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;}
 
 .main-home-content-post-thumbnail img{
+    object-fit: cover;
+    object-position: center;
     border-radius: 5px;
+    height: 350px;
+
+}
+
+.sticky .main-home-content-post-thumbnail{
+    position: relative;
+}
+
+.sticky .main-home-content-post-thumbnail::before{
+    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 512 512'%3E%3Cpath fill='%23ffffff' d='M59.1 236.3h393.8s-19.7-98.5-98.5-98.5V59.1L413.5 0h-315l59.1 59.1v78.8c-78.8-.1-98.5 98.4-98.5 98.4M256 512l39.4-256h-78.8z'/%3E%3C/svg%3E");
+    font-size: 32px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    background-color: rgba(159, 224, 182, 0.649);
+    padding-top: 5px;
+    padding-right: 10px;
+    padding-left: 20px;
+    padding-bottom: 5px;
+    border-radius: 0px 0px 0px 50px ;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+
 }
 
 .main-home-content-title{
@@ -98,6 +128,7 @@ body{
     height: 60px;
     background-color: rgba(159, 224, 182, 0.223);
     border-radius: 15px;
+    
 }
 
 .main-home-content-post-meta .author-avatar img{
@@ -121,7 +152,179 @@ body{
     justify-content: space-around;
 }
 
-.total-view p::before{
-   
+
+@media (max-width:800px){
+
+    .main-home{
+        margin: 10px 10px;
+        padding: 5px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main-home-content{
+        width: 100%;
+    
+    }
+    
+    .main-home-sidebar{
+        width: 100%;
+    }
+
+
+
+    .main-home-content-post-thumbnail img{
+        border-radius: 5px;
+        height: 200px;
+    
+    }
+
+}
+
+@media (max-width:1100px) {
+    .main-home{
+        margin: 10px 10px;
+        padding: 5px;
+        display: flex;
+    }
+}
+
+
+/* 
+.......................................
+..............  Pagination Style
+.......................................
+ */
+
+.pagination {
+    margin-top: 20px; /* Adjust the top margin as needed */
+    text-align: center;
+}
+
+.pagination .page-numbers {
+    display: inline-block;
+    margin: 0 4px;
+    padding: 6px 12px;
+    background-color: #f0f0f0; /* Background color of the pagination buttons */
+    color: #333; /* Text color of the pagination buttons */
+    border-radius: 10px;
+    text-decoration: none;
+    transition: transform 0.2s, box-shadow 0.2s; /* Adding transition for scale and box-shadow */
+}
+
+.pagination .page-numbers:hover {
+    background-color: var(--primary-color); 
+    color: var(--secondary-color);
+    transform: scale(1.1); /* Scale effect on hover */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Box shadow on hover */
+}
+
+.pagination .current {
+    background-color: var(--primary-color); 
+    color: #fff; /* Text color of the current page button */
+}
+
+
+/* 
+.......................................
+..............  Single One Post
+.......................................
+ */
+
+.single-one-post{
+    margin: 10px 150px;
+    padding: 20px 30px;
+    display: flex;
+    gap: 50px;
+
+}
+
+.single-one-post-content{
+    width: 65%;
+}
+
+.single-one-post-sidebar{
+    width: 35%;
+}
+
+.single-one-post .post-thumbnail img{
+    height: 450px;
+    border-radius: 5px;
+    background-color: #232323;
+    display: block;
+    
+}
+
+.post-thumbnail{
+    position: relative;
+}
+
+.single-one-post-thumbnail-inner {
+    position: absolute;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    justify-content: end;
+    color: white;
+    top: 0;
+    left: 0;
+    width: 100%; /* Ensure the overlay covers the entire image width */
+    height: 100%; /* Ensure the overlay covers the entire image height */
+    padding: 20px; /* Adjust padding as needed */
+    background: linear-gradient(0deg, rgba(8,6,1,0.6559873949579832) 21%, rgba(253,187,45,0) 100%);
+    border-radius: 5px;
+
+}
+
+.single-one-post-thumbnail-inner .post-meta{
+    display: flex;
+    gap: 10px;
+}
+
+.single-one-post-thumbnail-inner .post-meta .post-meta-inner{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.single-one-post-thumbnail-inner .post-meta .author-avatar img{
+    position: relative;
+    height: 40px ;
+    width: 40px;
+    border-radius: 5px;
+    object-fit: cover;
+    object-position: center;
+}
+
+@media (max-width:800px){
+
+    .single-one-post{
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        margin: 0px;
+    
+    }
+
+    .single-one-post-content{
+        width: 100%;
+    }
+    
+    .single-one-post-sidebar{
+        width: 100%;
+    }
+
+    .single-one-post .post-thumbnail img{
+        height: 200px;
+    }
+
+    .single-one-post-title{
+        font-size: 20px;
+        line-height: 1.6;
+    }
+
+    .single-one-post-thumbnail-inner{
+        gap: 5px;
+    }
 }
 
