--- a/main.css
+++ b/main.css
@@ -3,97 +3,62 @@
     padding: 0px;
     box-sizing: border-box;
 }
-
 @font-face {
     font-family: 'Poppins';
     src: url('Assets/Css/fonts/poppins.medium.ttf') format('truetype');
-    /* You can also specify other font formats here */
-  }
-
+   /* You can also specify other font formats here */
+}
 :root {
     --primary: #ffffff;
     --primary-color: rgb(255, 0, 0);
     --secondary-color: #ffffff;
     --primary-text: #000000;
     --secondary-text: #232323;
-    --link-color: #270ee3;
-
+    --link-color: #2515d4;
 }
-
 html {
     scroll-behavior: smooth;
-  }
-
+}
 body{
-    background-color: #ffffff;
+    background-color: #ffffff77;
     transition: all 0.3s;
     line-height: 1.5;
     font-family: 'Poppins';
     letter-spacing: 0.5px;
-
 }
-
 p{
     line-height: 1.6;
-    
 }
-
-
-
-
-
-#main-header{
-    width: 100%;
-    height: 60px;
-    /* background-color: var(--primary); */
-    background-color: aqua;
-}
-
-
-/* 
-.......................................
-.............. Root css
-.......................................
- */
-
- a{
+/* ....................................... 
+.............. Root css 
+....................................... */
+a{
     text-decoration: none;
     color: var(--link-color);
-
- }
-
- .title a, .title{
+}
+.title a, .title{
     color: var(--primary-text);
- }
-
- .thumbnail img{
+}
+.thumbnail img{
     width: 100%;
 }
-
-
-/* 
-.......................................
-..............  Main Home Css
-.......................................
- */
-
+/* .......................................
+ .............. Main Home Css
+  ....................................... */
 .main-home{
     margin: 10px 150px;
-    padding: 20px 30px;
+    padding: 0px 30px;
     display: flex;
     gap: 50px;
     flex: 1;
 }
-
 .main-home-content{
     width: 65%;
-
 }
-
 .main-home-sidebar{
     width: 35%;
+    margin-top: 20px;
 }
-
 .main-home-content-post{
     background-color: var(--primary);
     display: flex;
@@ -102,20 +67,17 @@ p{
     padding: 15px;
     margin: 20px 0px;
     border-radius: 10px;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;}
-
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
 .main-home-content-post-thumbnail img{
     object-fit: cover;
     object-position: center;
     border-radius: 5px;
     height: 350px;
-
 }
-
 .sticky .main-home-content-post-thumbnail{
     position: relative;
 }
-
 .sticky .main-home-content-post-thumbnail::before{
     content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 512 512'%3E%3Cpath fill='%23ffffff' d='M59.1 236.3h393.8s-19.7-98.5-98.5-98.5V59.1L413.5 0h-315l59.1 59.1v78.8c-78.8-.1-98.5 98.4-98.5 98.4M256 512l39.4-256h-78.8z'/%3E%3C/svg%3E");
     font-size: 32px;
@@ -129,13 +91,10 @@ p{
     padding-bottom: 5px;
     border-radius: 0px 0px 0px 50px ;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-
 }
-
 .main-home-content-title{
     margin-bottom: 10px;
 }
-
 .main-home-content-post-footer{
     display: flex;
     justify-content: space-between;
@@ -146,9 +105,7 @@ p{
     height: 60px;
     background-color: rgba(159, 224, 182, 0.223);
     border-radius: 15px;
-    
 }
-
 .main-home-content-post-meta .author-avatar img{
     width: 50px;
     height: 50px;
@@ -157,128 +114,111 @@ p{
     object-position: center;
     border: dotted 1px var(--primary-color);
 }
-
 .main-home-content-post-meta .author-and-date{
     display: flex;
     gap: 10px;
     object-fit: cover;
     object-position: center;
 }
-
 .main-home-content-post-meta .author-name-and-date{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
-
-
-
-
 @media (max-width:800px){
-
     .main-home{
         margin: 10px 10px;
         padding: 5px;
         display: flex;
         flex-direction: column;
-    }
-
+   }
     .main-home-content{
         width: 100%;
-    
-    }
-    
+   }
     .main-home-sidebar{
         width: 100%;
-    }
-
-
-
+   }
     .main-home-content-post-thumbnail img{
         border-radius: 5px;
         height: 200px;
-    
-    }
-
+   }
 }
-
 @media (max-width:1100px) {
     .main-home{
         margin: 10px 10px;
         padding: 5px;
         display: flex;
-    }
+   }
 }
-
-
-/* 
-.......................................
-..............  Pagination Style
-.......................................
- */
-
+/* .......................................
+ .............. Pagination Style 
+ ....................................... */
 .pagination {
-    margin-top: 20px; /* Adjust the top margin as needed */
+    margin-top: 20px;
+   /* Adjust the top margin as needed */
     text-align: center;
 }
-
 .pagination .page-numbers {
     display: inline-block;
     margin: 0 4px;
     padding: 6px 12px;
-    background-color: #f0f0f0; /* Background color of the pagination buttons */
-    color: #333; /* Text color of the pagination buttons */
+    background-color: #f0f0f0;
+   /* Background color of the pagination buttons */
+    color: #333;
+   /* Text color of the pagination buttons */
     border-radius: 10px;
     text-decoration: none;
-    transition: transform 0.2s, box-shadow 0.2s; /* Adding transition for scale and box-shadow */
+    transition: transform 0.2s, box-shadow 0.2s;
+   /* Adding transition for scale and box-shadow */
 }
-
 .pagination .page-numbers:hover {
-    background-color: var(--primary-color); 
+    background-color: var(--primary-color);
     color: var(--secondary-color);
-    transform: scale(1.1); /* Scale effect on hover */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Box shadow on hover */
+    transform: scale(1.1);
+   /* Scale effect on hover */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+   /* Box shadow on hover */
 }
-
 .pagination .current {
-    background-color: var(--primary-color); 
-    color: #fff; /* Text color of the current page button */
+    background-color: var(--primary-color);
+    color: #fff;
+   /* Text color of the current page button */
 }
-
-
-/* 
-.......................................
-..............  Single One Post
-.......................................
- */
-
+/* .................................. 
+................. Footer 
+.................................. */
+.footer-content{
+    text-align: center;
+}
+/* .......................................
+ .............. Single One Post 
+ ....................................... */
 .single-one-post{
     margin: 10px 150px;
     padding: 20px 30px;
     display: flex;
     gap: 50px;
-
 }
-
 .single-one-post-content{
     width: 65%;
+    background-color: var(--primary);
+    padding: 20px;
+    border-radius: 20px;
+   /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    */
 }
-
 .single-one-post-sidebar{
     width: 35%;
 }
-
 .single-one-post .post-thumbnail img{
     height: 400px;
     border-radius: 5px;
     background-color: #232323;
     display: block;
 }
-
 .post-thumbnail{
     position: relative;
 }
-
 .single-one-post-thumbnail-inner {
     position: absolute;
     display: flex;
@@ -288,14 +228,15 @@ p{
     color: white;
     top: 0;
     left: 0;
-    width: 100%; /* Ensure the overlay covers the entire image width */
-    height: 100%; /* Ensure the overlay covers the entire image height */
-    padding: 20px; /* Adjust padding as needed */
+    width: 100%;
+   /* Ensure the overlay covers the entire image width */
+    height: 100%;
+   /* Ensure the overlay covers the entire image height */
+    padding: 20px;
+   /* Adjust padding as needed */
     background: linear-gradient(0deg, rgba(8,6,1,0.6559873949579832) 21%, rgba(253,187,45,0) 100%);
     border-radius: 5px;
-
 }
-
 .single-one-post-thumbnail-inner .category a{
     background-color: var(--primary-color);
     color: #f0f0f0;
@@ -304,18 +245,15 @@ p{
     font-size: 13px;
     text-transform: uppercase;
 }
-
 .single-one-post-thumbnail-inner .post-meta{
     display: flex;
     gap: 10px;
 }
-
 .single-one-post-thumbnail-inner .post-meta .post-meta-inner{
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-
 .single-one-post-thumbnail-inner .post-meta .author-avatar img {
     position: relative;
     height: 50px;
@@ -324,60 +262,86 @@ p{
     object-fit: cover;
     object-position: center;
 }
-
-.author-name{
-    text-transform: uppercase;
+.single-one-post-title{
+    font-size: 25px;
+    margin: 0;
+    padding: 0;
+    color: var(--secondary-color);
 }
-
+.author-name ,.post-date{
+    color: var(--secondary-color);
+}
 .post-content{
     margin-top: 30px;
 }
-
 .post-content p{
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 19px;
 }
-
 .has-drop-cap:first-of-type:first-letter {
     font-size: 80px;
-    /* Adjust the font size as needed */
+   /* Adjust the font size as needed */
     font-weight: bold;
 }
-
 .comments-section{
-margin-top: 30px;  }
-
-
+    margin-top: 30px;
+}
 @media (max-width:800px){
-
     .single-one-post{
         padding: 10px;
         display: flex;
         flex-direction: column;
         margin: 0px;
-    
-    }
-
+   }
     .single-one-post-content{
         width: 100%;
-    }
-    
+   }
     .single-one-post-sidebar{
         width: 100%;
-    }
-
+   }
     .single-one-post .post-thumbnail img{
-        height: 200px;
-    }
-
+        height: 300px;
+   }
     .single-one-post-title{
         font-size: 20px;
         line-height: 1.6;
-    }
-
+   }
     .single-one-post-thumbnail-inner{
         gap: 5px;
-    }
+   }
 }
-
+/* ................... 
+.............Side Bar 
+.................. */
+#sidebar{
+    position: sticky;
+    z-index: 9;
+    top: 100px;
+}
+/* ........................... 
+.............header-one 
+........................... */
+.site-header-one{
+    padding: 10px 200px;
+}
+.site-header-one .container{
+    display: flex;
+    color: var(--primary-text);
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+}
+.menu-one{
+    display: flex;
+    gap: 10px;
+    list-style-type: none;
+    color: var(--primary-text);
+}
+#main-header {
+    background-color: #ffffff;
+    position: sticky;
+    top: 0;
+    z-index: 999999;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
