--- a/main.css
+++ b/main.css
@@ -1,72 +1,82 @@
-*{
+* {
     margin: 0;
     padding: 0px;
     box-sizing: border-box;
-}
-@font-face {
+ }
+ 
+ @font-face {
     font-family: 'Poppins';
     src: url('Assets/Css/fonts/poppins.medium.ttf') format('truetype');
-   /* You can also specify other font formats here */
-}
-
-
-
-:root {
+    /* You can also specify other font formats here */
+ }
+ 
+ 
+ :root {
     --primary: #ffffff;
     --primary-color: rgb(255, 0, 0);
     --secondary-color: #ffffff;
     --primary-text: #000000;
     --secondary-text: #232323;
     --link-color: #2515d4;
-}
-
-
-html {
+ }
+ 
+ 
+ html {
     scroll-behavior: smooth;
-}
-body{
+ }
+ 
+ body {
     background-color: var(--primary);
     transition: all 0.3s;
     line-height: 1.5;
     font-family: 'Poppins';
     letter-spacing: 0.5px;
-}
-p{
+ }
+ 
+ p {
     line-height: 1.6;
-}
-/* ....................................... 
-.............. Root css 
-....................................... */
-a{
+ }
+ 
+ /* ....................................... 
+ .............. Root css 
+ ....................................... */
+ a {
     text-decoration: none;
     color: var(--link-color);
-}
-.title a, .title{
+ }
+ 
+ .title a,
+ .title {
     color: var(--primary-text);
     font-size: 25px;
     line-height: 1.5;
-}
-.thumbnail img{
+ }
+ 
+ .thumbnail img {
     width: 100%;
-}
-/* .......................................
- .............. Main Home Css
-  ....................................... */
-.main-home{
+ }
+ 
+ /* .......................................
+  .............. Main Home Css
+   ....................................... */
+ .main-home {
     margin: 10px 150px;
     padding: 0px 30px;
     display: flex;
     gap: 50px;
     flex: 1;
-}
-.main-home-content{
+ }
+ 
+ .main-home-content {
     width: 65%;
-}
-.main-home-sidebar{
+ }
+ 
+ .main-home-sidebar {
     width: 35%;
     margin-top: 20px;
-}
-.main-home-content-post{
+ }
+ 
+ .main-home-content-post {
     background-color: var(--primary);
     display: flex;
     flex-direction: column;
@@ -75,17 +85,20 @@ a{
     margin: 20px 0px;
     border-radius: 10px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-}
-.main-home-content-post-thumbnail img{
+ }
+ 
+ .main-home-content-post-thumbnail img {
     object-fit: cover;
     object-position: center;
     border-radius: 5px;
     height: 350px;
-}
-.sticky .main-home-content-post-thumbnail{
+ }
+ 
+ .sticky .main-home-content-post-thumbnail {
     position: relative;
-}
-.sticky .main-home-content-post-thumbnail::before{
+ }
+ 
+ .sticky .main-home-content-post-thumbnail::before {
     content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 512 512'%3E%3Cpath fill='%23ffffff' d='M59.1 236.3h393.8s-19.7-98.5-98.5-98.5V59.1L413.5 0h-315l59.1 59.1v78.8c-78.8-.1-98.5 98.4-98.5 98.4M256 512l39.4-256h-78.8z'/%3E%3C/svg%3E");
     font-size: 32px;
     position: absolute;
@@ -96,13 +109,15 @@ a{
     padding-right: 10px;
     padding-left: 20px;
     padding-bottom: 5px;
-    border-radius: 0px 0px 0px 50px ;
+    border-radius: 0px 0px 0px 50px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-}
-.main-home-content-title{
+ }
+ 
+ .main-home-content-title {
     margin-bottom: 10px;
-}
-.main-home-content-post-footer{
+ }
+ 
+ .main-home-content-post-footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -112,121 +127,140 @@ a{
     height: 60px;
     background-color: rgba(159, 224, 182, 0.223);
     border-radius: 15px;
-}
-.main-home-content-post-meta .author-avatar img{
+ }
+ 
+ .main-home-content-post-meta .author-avatar img {
     width: 50px;
     height: 50px;
     border-radius: 50px;
     object-fit: cover;
     object-position: center;
     border: dotted 1px var(--primary-color);
-}
-.main-home-content-post-meta .author-and-date{
+ }
+ 
+ .main-home-content-post-meta .author-and-date {
     display: flex;
     gap: 10px;
     object-fit: cover;
     object-position: center;
-}
-.main-home-content-post-meta .author-name-and-date{
+ }
+ 
+ .main-home-content-post-meta .author-name-and-date {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-}
-@media (max-width:800px){
-    .main-home{
-        margin: 10px 10px;
-        padding: 5px;
-        display: flex;
-        flex-direction: column;
-   }
-    .main-home-content{
-        width: 100%;
-   }
-    .main-home-sidebar{
-        width: 100%;
-   }
-    .main-home-content-post-thumbnail img{
-        border-radius: 5px;
-        height: 200px;
-   }
-}
-@media (max-width:1100px) {
-    .main-home{
-        margin: 10px 10px;
-        padding: 5px;
-        display: flex;
-   }
-}
-/* .......................................
- .............. Pagination Style 
- ....................................... */
-.pagination {
+ }
+ 
+ @media (max-width:800px) {
+    .main-home {
+       margin: 10px 10px;
+       padding: 5px;
+       display: flex;
+       flex-direction: column;
+    }
+ 
+    .main-home-content {
+       width: 100%;
+    }
+ 
+    .main-home-sidebar {
+       width: 100%;
+    }
+ 
+    .main-home-content-post-thumbnail img {
+       border-radius: 5px;
+       height: 200px;
+    }
+ }
+ 
+ @media (max-width:1100px) {
+    .main-home {
+       margin: 10px 10px;
+       padding: 5px;
+       display: flex;
+    }
+ }
+ 
+ /* .......................................
+  .............. Pagination Style 
+  ....................................... */
+ .pagination {
     margin-top: 20px;
-   /* Adjust the top margin as needed */
+    /* Adjust the top margin as needed */
     text-align: center;
-}
-.pagination .page-numbers {
+ }
+ 
+ .pagination .page-numbers {
     display: inline-block;
     margin: 0 8px;
     padding: 6px 18px;
     background-color: #f0f0f0;
-   /* Background color of the pagination buttons */
+    /* Background color of the pagination buttons */
     color: #333;
-   /* Text color of the pagination buttons */
+    /* Text color of the pagination buttons */
     border-radius: 10px;
     text-decoration: none;
     transition: transform 0.2s, box-shadow 0.2s;
-   /* Adding transition for scale and box-shadow */
-}
-.pagination .page-numbers:hover {
+    /* Adding transition for scale and box-shadow */
+ }
+ 
+ .pagination .page-numbers:hover {
     background-color: var(--primary-color);
     color: var(--secondary-color);
     transform: scale(1.1);
-   /* Scale effect on hover */
+    /* Scale effect on hover */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-   /* Box shadow on hover */
-}
-.pagination .current {
+    /* Box shadow on hover */
+ }
+ 
+ .pagination .current {
     background-color: var(--primary-color);
     color: #fff;
-   /* Text color of the current page button */
-}
-/* .................................. 
-................. Footer 
-.................................. */
-.footer-content{
+    /* Text color of the current page button */
+ }
+ 
+ /* .................................. 
+ ................. Footer 
+ .................................. */
+ .footer-content {
     text-align: center;
-}
-/* .......................................
- .............. Single One Post 
- ....................................... */
-.single-one-post{
+ }
+ 
+ /* .......................................
+  .............. Single One Post 
+  ....................................... */
+ .single-one-post {
     margin: 10px 150px;
     padding: 20px 30px;
     display: flex;
     gap: 50px;
-}
-.single-one-post-content{
+ }
+ 
+ .single-one-post-content {
     width: 65%;
     background-color: var(--primary);
     padding: 20px;
     border-radius: 20px;
-   /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-    */
-}
-.single-one-post-sidebar{
+    /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+     */
+ }
+ 
+ .single-one-post-sidebar {
     width: 35%;
-}
-.single-one-post .post-thumbnail img{
+ }
+ 
+ .single-one-post .post-thumbnail img {
     height: 400px;
     border-radius: 5px;
     background-color: #232323;
     display: block;
-}
-.post-thumbnail{
+ }
+ 
+ .post-thumbnail {
     position: relative;
-}
-.single-one-post-thumbnail-inner {
+ }
+ 
+ .single-one-post-thumbnail-inner {
     position: absolute;
     display: flex;
     gap: 20px;
@@ -236,124 +270,156 @@ a{
     top: 0;
     left: 0;
     width: 100%;
-   /* Ensure the overlay covers the entire image width */
+    /* Ensure the overlay covers the entire image width */
     height: 100%;
-   /* Ensure the overlay covers the entire image height */
+    /* Ensure the overlay covers the entire image height */
     padding: 20px;
-   /* Adjust padding as needed */
-    background: linear-gradient(0deg, rgba(8,6,1,0.6559873949579832) 21%, rgba(253,187,45,0) 100%);
+    /* Adjust padding as needed */
+    background: linear-gradient(0deg, rgba(8, 6, 1, 0.6559873949579832) 21%, rgba(253, 187, 45, 0) 100%);
     border-radius: 5px;
-}
-.single-one-post-thumbnail-inner .category a{
+ }
+ 
+ .single-one-post-thumbnail-inner .category a {
     background-color: var(--primary-color);
     color: #f0f0f0;
     padding: 2px 12px;
     border-radius: 10px;
     font-size: 13px;
     text-transform: uppercase;
-}
-.single-one-post-thumbnail-inner .post-meta{
+ }
+ 
+ .single-one-post-thumbnail-inner .post-meta {
     display: flex;
     gap: 10px;
-}
-.single-one-post-thumbnail-inner .post-meta .post-meta-inner{
+ }
+ 
+ .single-one-post-thumbnail-inner .post-meta .post-meta-inner {
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-.single-one-post-thumbnail-inner .post-meta .author-avatar img {
+ }
+ 
+ .single-one-post-thumbnail-inner .post-meta .author-avatar img {
     position: relative;
     height: 50px;
     width: 50px;
     border-radius: 50px;
     object-fit: cover;
     object-position: center;
-}
-.single-one-post-title{
+ }
+ 
+ .single-one-post-title {
     font-size: 25px;
     margin: 0;
     padding: 0;
     color: var(--secondary-color);
-}
-.author-name ,.post-date{
+ }
+ 
+ .author-name,
+ .post-date {
     color: var(--secondary-color);
-}
-.post-content{
+ }
+ 
+ .post-content {
     margin-top: 30px;
-}
-.post-content p{
+ }
+ 
+ .post-content p {
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 19px;
-}
-.has-drop-cap:first-of-type:first-letter {
+ }
+ 
+ .has-drop-cap:first-of-type:first-letter {
     font-size: 80px;
-   /* Adjust the font size as needed */
+    /* Adjust the font size as needed */
     font-weight: bold;
-}
-.comments-section{
+ }
+ 
+ .comments-section {
     margin-top: 30px;
-}
-@media (max-width:800px){
-    .single-one-post{
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-        margin: 0px;
-   }
-    .single-one-post-content{
-        width: 100%;
-   }
-    .single-one-post-sidebar{
-        width: 100%;
-   }
-    .single-one-post .post-thumbnail img{
-        height: 300px;
-   }
-    .single-one-post-title{
-        font-size: 20px;
-        line-height: 1.6;
-   }
-    .single-one-post-thumbnail-inner{
-        gap: 5px;
-   }
-}
-/* ................... 
-.............Side Bar 
-.................. */
-#sidebar{
+ }
+ 
+ @media (max-width:800px) {
+    .single-one-post {
+       padding: 10px;
+       display: flex;
+       flex-direction: column;
+       margin: 0px;
+    }
+ 
+    .single-one-post-content {
+       width: 100%;
+    }
+ 
+    .single-one-post-sidebar {
+       width: 100%;
+    }
+ 
+    .single-one-post .post-thumbnail img {
+       height: 300px;
+    }
+ 
+    .single-one-post-title {
+       font-size: 20px;
+       line-height: 1.6;
+    }
+ 
+    .single-one-post-thumbnail-inner {
+       gap: 5px;
+    }
+ }
+ 
+ /* ................... 
+ .............Side Bar 
+ .................. */
+ #sidebar {
     position: sticky;
     z-index: 9;
     top: 100px;
-}
-
-.widget{
+ }
+ 
+ .widget {
     margin-bottom: 50px;
-}
-
-/* ........................... 
-.............header-one 
-........................... */
-.site-header-one{
+ }
+ 
+ /* ........................... 
+ .............header-one 
+ ........................... */
+ .site-header-one {
     padding: 10px 200px;
-}
-.site-header-one .container{
+ }
+ 
+ .site-header-one .container {
     display: flex;
     color: var(--primary-text);
     align-items: center;
     justify-content: space-between;
     text-align: center;
-}
-.menu-one{
+ }
+ 
+ .menu-one {
     display: flex;
     gap: 10px;
     list-style-type: none;
     color: var(--primary-text);
-}
-#main-header {
+ }
+ 
+ #main-header {
     background-color: #ffffff;
     position: sticky;
     top: 0;
     z-index: 999999;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-}
+ }
+
+
+ @media (max-width:800px) {
+    .site-header-one {
+        padding: 10px 10px;
+     }
+
+     .menu-one {
+        display: none;
+     }
+ }
