--- a/main.css
+++ b/main.css
@@ -387,7 +387,7 @@
  .............header-one 
  ........................... */
  .site-header-one {
-    padding: 10px 200px;
+    padding: 0px 200px;
  }
  
  .site-header-one .container {
@@ -396,6 +396,13 @@
     align-items: center;
     justify-content: space-between;
     text-align: center;
+ }
+
+ .site-branding-one img{
+
+   width: 150px;
+   height: 60px;
+
  }
  
  .menu-one {
